	* src: gnome_ui.c, gnome_frame.c: fix for 
		bug # 1713971
	* src/xtoffmpeg.c: fix for bug # 1713968
	* src: codecs.c, control.h, xtoffmpeg.c, gnome_ui.c, 
		capture.c, gnome_ui.h, eggtrayicon.c, 
		gnome_frame.c, eggtrayicon.h, options.c: 
		code cleanup, fixed bug around releasing
		pause in stopped mode that would not set
		VC_STOP immediately

2007-05-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, app_data.h, gnome_frame.c, 
		gnome_options.c, Makefile.am, options.c, 
		gnome-xvidcap.glade: initial version of
		"minimize to tray" (rfe # 1520188), fix
		for bug # 1711808 and bug # 1709369
	* src: eggtrayicon.c, eggtrayicon.h: forgot to
		add for previous commit
	* src: gnome_ui.c, gnome_ui.h, gnome_frame.c:
		saving screen real estate by removing
		image in minimized form, also fixed
		frame as undraggable while recording
		and deiconify main control earlier
		when stopping

2007-05-02  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: updated Italian translation

2007-05-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: app_data.c, app_data.h, gnome_options.c:
		add error msg for mono vorbis audio as ffmpeg
		only supports stereo atm.
	* src/app_data.c, doc/xvidcap/C/xvidcap.xml, 
		doc/xvidcap/C/xvidcap.xml.pot, 
		doc/xvidcap/de/xvidcap.xml-de.po, 
		doc/xvidcap/it/xvidcap.xml-it.po, 
		po/en.po, po/es.po, po/de.po, po/it.po:
		change audio defaults to 44.1KHz/64Kb/2ch
		and remove tip to manually do so from docs
	
2007-04-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, config.h.in, src: codecs.c, codecs.h, 
		gnome_options.c: remove --enable-libvorbis
		again to use ffmpeg's internal vorbis encoder
	* configure.in, config.h.in, src: codecs.c, codecs.h, 
		gnome_ui.c, app_data.c, app_data.h: basic
		support for theora and vorbis in avi. See
		./configure --help. Also makes mp3 support 
		configurable
	* configure.in, src/app_data.h, src/gnome_ui.c:
		remove GTKVERSION and XVC_VERSION again in