@@ -9,6 +9,10 @@
 		code cleanup, fixed bug around releasing
 		pause in stopped mode that would not set
 		VC_STOP immediately
+	* src/gnome_ui.c: fix bug around calculating
+		capture times when stopping paused
+		session (and as a consequence the avg
+		frame rate calculation)
 
 2007-05-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src: gnome_ui.c, app_data.h, gnome_frame.c, 
